updating localized files
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R3OESSP2RC1_BR@5644 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/AcceptInvitation.cs.resx
+++ b/ifolder/src/FormsTrayApp/AcceptInvitation.cs.resx
@@ -1175,7 +1175,7 @@
 	</data>
   
 	<data name="pathExistsError">
-		<value>Umístění, které jste vybrali, již obsahuje složku se stejným názvem jako je tato složka iFolder.  Vyberte prosím jiné umístění a zkuste to znovu.</value>
+		<value>Umístění, které jste vybrali, již obsahuje složku se stejným názvem, jako má tato složka iFolder.  Vyberte prosím jiné umístění a zkuste to znovu.</value>
 	</data>
   
 	<data name="pathInStoreError">
@@ -1195,7 +1195,7 @@
 	</data>
   
 	<data name="networkPath">
-		<value>Vybrané umístění je na síti nebo na jiné než fyzické jednotce.  Složky iFolder musí být umístěny na fyzické jednotce.  Vyberte prosím jiné umístění a zkuste to znovu.</value>
+		<value>Vybrané umístění je v síti nebo na jiné než fyzické jednotce.  Složky iFolder musí být umístěny na fyzické jednotce.  Vyberte prosím jiné umístění a zkuste to znovu.</value>
 	</data>
   
 	<data name="selectLocation">
