--- a/ifolder/src/FormsTrayApp/ServerInfo.sk.resx
+++ b/ifolder/src/FormsTrayApp/ServerInfo.sk.resx
@@ -1499,7 +1499,7 @@
 	</data>
   
 	<data name="iFolderAccountDisabled">
-		<value>Toto konto priečinku iFolder je zakázané. Požiadajte o pomoc správcu siete.</value>
+		<value>Toto konto priečinka iFolder je zakázané. Požiadajte o pomoc správcu siete.</value>
 	</data>
   
 	<data name="accountLockout">
