--- a/ifolder/src/LinuxClient/po/pl.po
+++ b/ifolder/src/LinuxClient/po/pl.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ifolder-build 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-11-08 09:24-0700\n"
-"PO-Revision-Date: 2005-11-08 09:24-0700\n"
+"POT-Creation-Date: 2005-11-21 10:59-0700\n"
+"PO-Revision-Date: 2005-11-21 10:59-0700\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -20,14 +20,14 @@ msgid ""
 "The iFolder is full.\n"
 "\n"
 "Click <a href=\"ShowSyncLog\">here</a> to view the Synchronization Log."
-msgstr "The iFolder is full.\n\nClick <a href=\"ShowSyncLog\">here</a> to view the Synchronization Log."
+msgstr "Określony folder iFolder jest pełny.\n\nKliknij <a href=\"ShowSyncLog\">tutaj</a>, aby wyświetlić dziennik synchronizacji."
 #: src/LinuxClient/application/iFolderApplication.cs:392 
 msgid ""
 "You have Read-only access to this iFolder.  Files that you place in this "
 "iFolder will not be synchronized.\n"
 "\n"
 "Click <a href=\"ShowSyncLog\">here</a> to view the Synchronization Log."
-msgstr "You have Read-only access to this iFolder.  Files that you place in this iFolder will not be synchronized.\n\nClick <a href=\"ShowSyncLog\">here</a> to view the Synchronization Log."
+msgstr "Masz dostęp do tego folderu iFolder w trybie tylko do odczytu. Umieszczone w tym folderze iFolder pliki nie zostaną zsynchronizowane.\n\nKliknij <a href=\"ShowSyncLog\">tutaj</a>, aby wyświetlić dziennik synchronizacji."
 #: src/LinuxClient/application/iFolderApplication.cs:462 
 #, csharp-format
 msgid "Incomplete Synchronization: {0}"
@@ -42,7 +42,7 @@ msgid ""
 "{0} has invited you to participate in this shared iFolder.\n"
 "\n"
 "Click <a href=\"SetUpiFolder:{1}\">here</a> to set up this iFolder."
-msgstr "{0} has invited you to participate in this shared iFolder.\n\nClick <a href=\"SetUpiFolder:{1}\">here</a> to set up this iFolder."
+msgstr "Użytkownik {0} zaprosił Cię do wspólnego korzystania z tego udostępnionego folderu iFolder.\n\nKliknij <a href=\"SetUpiFolder:{1}\">tutaj</a>, aby skonfigurować ten folder iFolder."
 #: src/LinuxClient/application/iFolderApplication.cs:587 
 #, csharp-format
 msgid ""
@@ -51,7 +51,7 @@ msgid ""
 "Click <a href=\"ResolveiFolderConflicts:{0}\">here</a> to resolve the "
 "conflicts.\n"
 "What is a <a href=\"ShowConflictHelp\">conflict</a>?"
-msgstr "A conflict has been detected in this iFolder.\n\nClick <a href=\"ResolveiFolderConflicts:{0}\">here</a> to resolve the conflicts.\nWhat is a <a href=\"ShowConflictHelp\">conflict</a>?"
+msgstr "W tym folderze iFolder wykryto konflikty.\n\nKliknij <a href=\"ResolveiFolderConflicts:{0}\">tutaj</a>, aby rozstrzygnąć te konflikty.\nCo to jest <a href=\"ShowConflictHelp\">konflikt</a>?"
 #: src/LinuxClient/application/iFolderApplication.cs:646 
 msgid "New iFolder User"
 msgstr "Nowy użytkownik iFolderu"
@@ -61,13 +61,13 @@ msgid "{0} has joined the iFolder \"{1}\""
 msgstr "Użytkownik {0} przyłączył się do iFolderu {1}"
 #: src/LinuxClient/application/iFolderApplication.cs:753 
 msgid "Welcome to iFolder"
-msgstr "Welcome to iFolder"
+msgstr "Witamy w programie iFolder"
 #: src/LinuxClient/application/iFolderApplication.cs:822 
 msgid "iFolder is starting"
-msgstr "iFolder is starting"
+msgstr "Trwa uruchamianie programu iFolder"
 #: src/LinuxClient/application/iFolderApplication.cs:835 
 msgid "iFolder is shutting down"
-msgstr "iFolder is shutting down"
+msgstr "Trwa zamykanie programu iFolder"
 #: src/LinuxClient/application/iFolderApplication.cs:875 
 #: src/LinuxClient/library/iFolderWindow.cs:285
 msgid "iFolders"
@@ -157,7 +157,7 @@ msgid "N/A"
 msgstr "Niedostępny"
 #: src/LinuxClient/library/CreateDialog.cs:82 
 msgid "New iFolder</span>"
-msgstr "Nowy iFolder</span>"
+msgstr "New iFolder</span>"
 #: src/LinuxClient/library/CreateDialog.cs:93 
 #: src/LinuxClient/library/iFolderWindow.cs:441
 #: src/LinuxClient/library/iFolderWindow.cs:2275
@@ -174,11 +174,11 @@ msgstr "Położenie:"
 #: src/LinuxClient/library/CreateDialog.cs:138 
 #: src/LinuxClient/library/iFolderAcceptDialog.cs:117
 msgid "Browse"
-msgstr "Przeglądaj"
+msgstr "Browse"
 #: src/LinuxClient/library/CreateDialog.cs:158 
 #: src/LinuxClient/library/iFolderAcceptDialog.cs:137
 msgid "Choose a folder..."
-msgstr "Wybierz folder..."
+msgstr "Choose a folder..."
 #: src/LinuxClient/library/CreateDialog.cs:195 
 #: src/LinuxClient/library/iFolderAcceptDialog.cs:173
 #: src/LinuxClient/library/iFolderAccessDialog.cs:114
@@ -229,7 +229,7 @@ msgid ""
 msgstr "Nazwa: {0}\nWspółużytkowane przez: {1}\nDostęp: {2}"
 #: src/LinuxClient/library/iFolderAcceptDialog.cs:91 
 msgid "Choose a location on this computer for the iFolder."
-msgstr "Wybierz położenie iFolderu na tym komputerze."
+msgstr "Choose a location on this computer for the iFolder."
 #: src/LinuxClient/library/iFolderAccessDialog.cs:75 
 msgid "Access for Multiple Users"
 msgstr "Dostęp dla wielu użytkowników"
@@ -585,10 +585,10 @@ msgid "Share _with..."
 msgstr "_Współużytkuj z..."
 #: src/LinuxClient/library/iFolderWindow.cs:517 
 msgid "Resolve conflic_ts"
-msgstr "Resolve conflic_ts"
+msgstr "Rozstrzygnij k_onflikty"
 #: src/LinuxClient/library/iFolderWindow.cs:522 
 msgid "S_ynchronize now"
-msgstr "S_ynchronize now"
+msgstr "Z_synchronizuj teraz"
 #: src/LinuxClient/library/iFolderWindow.cs:527 
 msgid "_Revert to a Normal Folder"
 msgstr "Przywróć do postaci zwykłego folderu"
@@ -809,7 +809,7 @@ msgid ""
 msgstr "Określony folder nie istnieje. Wybierz istniejący folder i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2303 
 msgid "A folder with the same name already exists."
-msgstr "A folder with the same name already exists."
+msgstr "Folder o takiej samej nazwie już istnieje."
 #: src/LinuxClient/library/iFolderWindow.cs:2304 
 msgid ""
 "The location you selected already contains a folder with the same name as "
@@ -817,121 +817,121 @@ msgid ""
 msgstr "Wybrane położenie zawiera już folder o takiej samej nazwie, jak iFolder. Wskaż inne położenie i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2308 
 msgid "iFolders cannot exist at the drive level."
-msgstr "iFolders cannot exist at the drive level."
+msgstr "Foldery iFolder nie mogą istnieć na poziomie dysku."
 #: src/LinuxClient/library/iFolderWindow.cs:2309 
 msgid ""
 "The location you selected is at the root of the drive.  Please select a "
 "location that is not at the root of a drive and try again."
-msgstr "The location you selected is at the root of the drive.  Please select a location that is not at the root of a drive and try again."
+msgstr "Wybrana lokalizacja to katalog główny dysku. Wybierz inną lokalizację niż katalog główny dysku i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2313 
 msgid "The selected location contains invalid characters."
-msgstr "The selected location contains invalid characters."
+msgstr "W określonej nazwie lokalizacji występują nieprawidłowe znaki."
 #: src/LinuxClient/library/iFolderWindow.cs:2314 
 msgid ""
 "The characters \\:*?\"<>| cannot be used in an iFolder. Please select a "
 "different location and try again."
-msgstr "The characters \\:*?\"<>| cannot be used in an iFolder. Please select a different location and try again."
+msgstr "W nazwie folderu iFolder nie mogą występować znaki \\:*?\"<>| . Określ inną nazwę lokalizacji i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2318 
 msgid "The selected location is inside the iFolder data folder."
-msgstr "The selected location is inside the iFolder data folder."
+msgstr "Wybrano lokalizację w folderze danych iFolder."
 #: src/LinuxClient/library/iFolderWindow.cs:2319 
 msgid ""
 "The iFolder data folder is normally located in your home folder in the "
 "folder \".local/share\".  Please select a different location and try again."
-msgstr "The iFolder data folder is normally located in your home folder in the folder \".local/share\".  Please select a different location and try again."
+msgstr "Folder danych iFolder jest zwykle umieszczony w folderze Home (Domowym) użytkownika, który znajduje się w folderze \".local/share\". Wybierz inną lokalizację i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2323 
 msgid "The selected location contains the iFolder data files."
-msgstr "The selected location contains the iFolder data files."
+msgstr "W wybranej lokalizacji znajdują się pliki danych iFolder."
 #: src/LinuxClient/library/iFolderWindow.cs:2324 
 msgid ""
 "The location you have selected contains the iFolder data files.  These are "
 "normally located in your home folder in the folder \".local/share\".  Please "
 "select a different location and try again."
-msgstr "The location you have selected contains the iFolder data files.  These are normally located in your home folder in the folder \".local/share\".  Please select a different location and try again."
+msgstr "W wybranej lokalizacji znajdują się pliki danych iFolder. Pliki te są zwykle umieszczone w folderze Home (Domowym) użytkownika, który znajduje się w folderze \".local/share\". Wybierz inną lokalizację i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2328 
 msgid "The selected location is on a network or non-physical drive."
-msgstr "The selected location is on a network or non-physical drive."
+msgstr "Wybrana lokalizacja to folder znajdujący się w sieci lub na innym dysku niż dysk fizyczny."
 #: src/LinuxClient/library/iFolderWindow.cs:2329 
 msgid ""
 "iFolders must reside on a physical drive.  Please select a different "
 "location and try again."
-msgstr "iFolders must reside on a physical drive.  Please select a different location and try again."
+msgstr "Foldery iFolder muszą znajdować się na dysku fizycznym. Wybierz inną lokalizację i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2333 
 msgid "The selected location contains a system folder."
-msgstr "The selected location contains a system folder."
+msgstr "W wybranej lokalizacji znajduje się folder systemowy."
 #: src/LinuxClient/library/iFolderWindow.cs:2334 
 msgid ""
 "System folders cannot be contained in an iFolder.  Please select a different "
 "location and try again."
-msgstr "System folders cannot be contained in an iFolder.  Please select a different location and try again."
+msgstr "W folderze iFolder nie mogą znajdować się foldery systemowe. Wybierz inną lokalizację i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2338 
 msgid "The selected location is a system drive."
-msgstr "The selected location is a system drive."
+msgstr "Wybrana lokalizacja to dysk systemowy."
 #: src/LinuxClient/library/iFolderWindow.cs:2339 
 msgid ""
 "System drives cannot be contained in an iFolder.  Please select a different "
 "location and try again."
-msgstr "System drives cannot be contained in an iFolder.  Please select a different location and try again."
+msgstr "W folderze iFolder nie mogą znajdować się dyski systemowe. Określ inną lokalizację i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2343 
 msgid "The selected location includes the Windows folder."
-msgstr "The selected location includes the Windows folder."
+msgstr "W wybranej lokalizacji znajduje się folder Windows."
 #: src/LinuxClient/library/iFolderWindow.cs:2344 
 msgid ""
 "The Windows folder cannot be contained in an iFolder.  Please select a "
 "different location and try again."
-msgstr "The Windows folder cannot be contained in an iFolder.  Please select a different location and try again."
+msgstr "W folderze iFolder nie może znajdować się folder Windows. Określ inne położenie i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2348 
 msgid "The selected location includes the Program Files folder."
-msgstr "The selected location includes the Program Files folder."
+msgstr "W wybranej lokalizacji znajduje się folder Program files."
 #: src/LinuxClient/library/iFolderWindow.cs:2349 
 msgid ""
 "The Program Files folder cannot be contained in an iFolder.  Please select a "
 "different location and try again."
-msgstr "The Program Files folder cannot be contained in an iFolder.  Please select a different location and try again."
+msgstr "W folderze iFolder nie może znajdować się folder Program files. Wybierz inną lokalizację i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2353 
 msgid "The selected location does not exist."
-msgstr "The selected location does not exist."
+msgstr "Określona lokalizacja nie istnieje."
 #: src/LinuxClient/library/iFolderWindow.cs:2354 
 msgid ""
 "iFolders can only be created from folders that exist.  Please select a "
 "different location and try again."
-msgstr "iFolders can only be created from folders that exist.  Please select a different location and try again."
+msgstr "Foldery iFolder mogą zostać utworzone tylko z istniejących folderów. Wybierz inną lokalizację i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2358 
 msgid "You do not have access to read files in the selected location."
-msgstr "You do not have access to read files in the selected location."
+msgstr "Nie masz uprawnień dostępu z możliwością odczytu do plików w określonej lokalizacji."
 #: src/LinuxClient/library/iFolderWindow.cs:2359 
 #: src/LinuxClient/library/iFolderWindow.cs:2364
 msgid ""
 "iFolders can only be created from folders where you have access to read and "
 "write files.  Please select a different location and try again."
-msgstr "iFolders can only be created from folders where you have access to read and write files.  Please select a different location and try again."
+msgstr "Foldery iFolder mogą zostać utworzone tylko z folderów, w których użytkownik ma uprawnienia dostępu z możliwością odczytu i zapisu do plików. Wybierz inną lokalizację i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2363 
 msgid "You do not have access to write files in the selected location."
-msgstr "You do not have access to write files in the selected location."
+msgstr "Nie masz uprawnień dostępu z możliwością zapisu do plików w określonej lokalizacji."
 #: src/LinuxClient/library/iFolderWindow.cs:2368 
 msgid "The selected location already contains an iFolder."
-msgstr "The selected location already contains an iFolder."
+msgstr "W wybranej lokalizacji znajduje się już folder iFolder."
 #: src/LinuxClient/library/iFolderWindow.cs:2369 
 #: src/LinuxClient/library/iFolderWindow.cs:2374
 msgid ""
 "iFolders cannot exist inside other iFolders.  Please select a different "
 "location and try again."
-msgstr "iFolders cannot exist inside other iFolders.  Please select a different location and try again."
+msgstr "Foldery iFolder nie mogą znajdować się w innych folderach iFolder. Wybierz inną lokalizację i spróbuj ponownie."
 #: src/LinuxClient/library/iFolderWindow.cs:2373 
 msgid "The selected location is inside another iFolder."
-msgstr "The selected location is inside another iFolder."
+msgstr "Wybrano lokalizację w innym folderze iFolder."
 #: src/LinuxClient/library/LogWindow.cs:58 
 msgid "iFolder Synchronization Log"
 msgstr "Dziennik synchronizacji iFolderów"
 #: src/LinuxClient/library/LogWindow.cs:152 
 msgid "Save"
-msgstr "Zapisz"
+msgstr "Save"
 #: src/LinuxClient/library/LogWindow.cs:153 
 msgid "Save the synchronization log"
 msgstr "Zapisz dziennik synchronizacji"
 #: src/LinuxClient/library/LogWindow.cs:157 
 msgid "Clear"
-msgstr "Wyczyść"
+msgstr "Clear"
 #: src/LinuxClient/library/LogWindow.cs:158 
 msgid "Clear the synchronization log"
 msgstr "Wyczyść dziennik synchronizacji"
@@ -1000,7 +1000,7 @@ msgstr "Brak wystarczającej ilości miejsca na dysku tego komputera uniemożliw
 #: src/LinuxClient/library/LogWindow.cs:427 
 #, csharp-format
 msgid "Read-only iFolder prevented synchronization: {0}"
-msgstr "Read-only iFolder prevented synchronization: {0}"
+msgstr "Synchronizacja folderu iFolder tylko do odczytu zatrzymana: {0}"
 #: src/LinuxClient/library/LogWindow.cs:432 
 #, csharp-format
 msgid "iFolder failed synchronization: {0}"
@@ -1042,7 +1042,7 @@ msgid "iFolder Preferences"
 msgstr "Preferencje iFolderów"
 #: src/LinuxClient/library/PreferencesWindow.cs:111 
 msgid "Accou_nts"
-msgstr "Accou_nts"
+msgstr "Ko_nta"
 #: src/LinuxClient/library/PrefsAccountsPage.cs:173 
 msgid "System Name"
 msgstr "Nazwa systemowa"
@@ -1084,7 +1084,7 @@ msgstr "Czy utracić bieżące ustawienia?"
 msgid ""
 "You are currently creating a new account.  By selecting a different account "
 "you cancel the operation."
-msgstr "You are currently creating a new account.  By selecting a different account you cancel the operation."
+msgstr "Trwa tworzenie nowego konta. Wybranie innego konta spowoduje anulowanie wykonywanej operacji."
 #: src/LinuxClient/library/PrefsAccountsPage.cs:671 
 msgid "Unable to log out of the iFolder Server"
 msgstr "Nie można wylogować się z serwera iFolder"
@@ -1142,7 +1142,7 @@ msgstr "Pozostało {0} logowań dodatkowych."
 msgid ""
 "You are currently creating a new account.  By closing the window or changing "
 "to a different page you cancel the operation."
-msgstr "You are currently creating a new account.  By closing the window or changing to a different page you cancel the operation."
+msgstr "Trwa tworzenie nowego konta. Zamknięcie tego okna lub przejście na inną stronę spowoduje anulowanie wykonywanej operacji."
 #: src/LinuxClient/library/PrefsGeneralPage.cs:102 
 msgid "Application"
 msgstr "Aplikacja"
@@ -1159,7 +1159,7 @@ msgid "Notification"
 msgstr "Potwierdzenie"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:163 
 msgid "Notify of share_d iFolders"
-msgstr "Notify of share_d iFolders"
+msgstr "Powiadomienie o u_dostępnionych folderach iFolder"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:170 
 msgid "Notify of conflic_ts"
 msgstr "Powiadom o konflik_tach"
@@ -1168,7 +1168,7 @@ msgid "Notify when a _user joins"
 msgstr "_Powiadom o dołączeniu użytkownika"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:219 
 msgid "Automatically S_ynchronize iFolders"
-msgstr "Automatically S_ynchronize iFolders"
+msgstr "Automatycznie s_ynchronizuj foldery iFolder"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:229 
 msgid "Synchronize iFolders Every"
 msgstr "Synchronizuj iFoldery co"
@@ -1186,12 +1186,12 @@ msgid "days"
 msgstr "dni"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:503 
 msgid "Synchronization Interval Limit"
-msgstr "Synchronization Interval Limit"
+msgstr "Limit długości interwału synchronizacji"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:504 
 msgid ""
 "The synchronization interval cannot be set to less than one minute.  It was "
 "automatically changed to 60 seconds."
-msgstr "The synchronization interval cannot be set to less than one minute.  It was automatically changed to 60 seconds."
+msgstr "Nie można ustawić interwału synchronizacji krótszego niż jedna minuta. Wartość interwału została automatycznie zmieniona na 60 sekund."
 #: src/LinuxClient/library/RemoveAccountDialog.cs:61 
 msgid "Remove this iFolder account?"
 msgstr "Czy usunąć to konto programu iFolder?"
@@ -1216,10 +1216,10 @@ msgstr "Usunięcie iFolderów z serwera spowoduje usunięcie plików przechowywa
 #: src/LinuxClient/library/Util.cs:167 
 #, csharp-format
 msgid "Error displaying help file \"{0}\""
-msgstr "Error displaying help file \"{0}\""
+msgstr "Błąd podczas wyświetlania pliku pomocy \"{0}\""
 #: src/LinuxClient/library/Util.cs:168 
 msgid "iFolder could not open the default web browser to show the help file."
-msgstr "iFolder could not open the default web browser to show the help file."
+msgstr "W programie iFolder nie można otworzyć domyślnej przeglądarki sieci Web w celu wyświetlenia pliku pomocy."
 #: src/LinuxClient/library/Util.cs:180 
 msgid "iFolder 3 Team"
 msgstr "Zespół iFolder 3"
