--- a/ifolder/src/FormsTrayApp/GlobalProperties.es.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.es.resx
@@ -2047,7 +2047,7 @@
 	</data>
   
 	<data name="menuViewLog.Text">
-		<value>Registro de sincronizaciones</value>
+		<value>&amp;Registro de sincronizaciones</value>
 	</data>
   
 	<data name="menuViewLog.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -2103,7 +2103,7 @@
 	</data>
   
 	<data name="menuEditPrefs.Text">
-		<value>Preferencias</value>
+		<value>&amp;Preferencias</value>
 	</data>
   
 	<data name="menuEditPrefs.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
