--- a/ifolder/src/FormsTrayApp/GlobalProperties.sk.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.sk.resx
@@ -2019,7 +2019,7 @@
 	</data>
   
 	<data name="menuViewAccounts.Text">
-		<value>Kontá</value>
+		<value>&amp;Kontá</value>
 	</data>
   
 	<data name="menuViewAccounts.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -2047,7 +2047,7 @@
 	</data>
   
 	<data name="menuViewLog.Text">
-		<value>Denník synchronizácie</value>
+		<value>&amp;Denník synchronizácie</value>
 	</data>
   
 	<data name="menuViewLog.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -2075,7 +2075,7 @@
 	</data>
   
 	<data name="menuEdit.Text">
-		<value>Upraviť</value>
+		<value>&amp;Upraviť</value>
 	</data>
   
 	<data name="menuEdit.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -2103,7 +2103,7 @@
 	</data>
   
 	<data name="menuEditPrefs.Text">
-		<value>Preferencie</value>
+		<value>&amp;Preferencie</value>
 	</data>
   
 	<data name="menuEditPrefs.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -2631,11 +2631,11 @@
 	</data>
   
 	<data name="syncError">
-		<value>Pri synchronizácii priečinku iFolder nastala chyba.</value>
+		<value>Pri synchronizácii priečinka iFolder nastala chyba.</value>
 	</data>
   
 	<data name="syncErrorTitle">
-		<value>Chyba synchronizácie priečinku iFolder</value>
+		<value>Chyba synchronizácie priečinka iFolder</value>
 	</data>
   
 	<data name="iFolderOpenError">
@@ -2643,15 +2643,15 @@
 	</data>
   
 	<data name="openErrorTitle">
-		<value>Chyba otvárania priečinku iFolder</value>
+		<value>Chyba otvárania priečinka iFolder</value>
 	</data>
   
 	<data name="iFolderRevertError">
-		<value>Pri zmene priečinku iFolder na normálny priečinok nastala chyba.</value>
+		<value>Pri zmene priečinka iFolder na normálny priečinok nastala chyba.</value>
 	</data>
   
 	<data name="revertErrorTitle">
-		<value>Chyba zmeny priečinku iFolder na normálny priečinok</value>
+		<value>Chyba zmeny priečinka iFolder na normálny priečinok</value>
 	</data>
   
 	<data name="logEntriesCleared">
@@ -2731,7 +2731,7 @@
 	</data>
   
 	<data name="declineError">
-		<value>Pri odstraňovaní priečinku iFolder nastala chyba.</value>
+		<value>Pri odstraňovaní priečinka iFolder nastala chyba.</value>
 	</data>
   
 	<data name="errorTitle">
@@ -2783,7 +2783,7 @@
 	</data>
   
 	<data name="removeiFolder2">
-		<value>Ak ste vlastníkom priečinku iFolder, táto akcia zruší zdieľanie priečinku iFolder, zmení všetky jeho kópie späť na normálne priečinky, a odstráni priečinok iFolder zo servera. Akste členom, táto akcia vám odoberie členstvo, a nebudete mať prístup k pôvodnému priečinku iFolder zo žiadneho počítača, pokiaľ vás vlastník znova nepozve. Z počítačov, na ktorých je priečinok iFolder momentálne nastavený, nebudú odstránené lokálne kópie obsahu priečinku iFolder.</value>
+		<value>Ak ste vlastníkom priečinka iFolder, táto akcia zruší zdieľanie priečinka iFolder, obnoví všetky jeho kópie späť na normálne priečinky a odstráni priečinok iFolder zo servera. Ak ste členom, táto akcia vám odoberie členstvo a nebudete mať prístup k pôvodnému priečinku iFolder zo žiadneho počítača, pokiaľ vás vlastník znova nepozve. Z počítačov, na ktorých je priečinok iFolder momentálne nastavený, sa neodstránia lokálne kópie obsahu priečinka iFolder.</value>
 	</data>
   
 	<data name="revertiFolder">
