--- a/ifolder/src/FormsTrayApp/Preferences.pt.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.pt.resx
@@ -935,7 +935,7 @@
 	</data>
   
 	<data name="notifyShared.Text">
-		<value>&amp;Notificar pastas do iFolder compartilhadas</value>
+		<value>&amp;Notificar pastas iFolder compartilhadas</value>
 	</data>
   
 	<data name="notifyShared.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
