--- a/ifolder/src/LinuxClient/po/hu.po
+++ b/ifolder/src/LinuxClient/po/hu.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ifolder-build 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-11-08 09:24-0700\n"
-"PO-Revision-Date: 2005-11-08 09:24-0700\n"
+"POT-Creation-Date: 2005-11-21 10:59-0700\n"
+"PO-Revision-Date: 2005-11-21 10:59-0700\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -20,14 +20,14 @@ msgid ""
 "The iFolder is full.\n"
 "\n"
 "Click <a href=\"ShowSyncLog\">here</a> to view the Synchronization Log."
-msgstr "The iFolder is full.\n\nClick <a href=\"ShowSyncLog\">here</a> to view the Synchronization Log."
+msgstr "Az iFolder mappa megtelt.\n\nHa meg szeretné tekinteni a szinkronizálási naplót, kattintson <a href=\"ShowSyncLog\">ide</a>."
 #: src/LinuxClient/application/iFolderApplication.cs:392 
 msgid ""
 "You have Read-only access to this iFolder.  Files that you place in this "
 "iFolder will not be synchronized.\n"
 "\n"
 "Click <a href=\"ShowSyncLog\">here</a> to view the Synchronization Log."
-msgstr "You have Read-only access to this iFolder.  Files that you place in this iFolder will not be synchronized.\n\nClick <a href=\"ShowSyncLog\">here</a> to view the Synchronization Log."
+msgstr "Ehhez az iFolder mappához Olvasásra hozzáférése van. Az ebben az iFolder mappában elhelyezett fájlok nem szinkronizálódnak.\n\nHa meg szeretné tekinteni a szinkronizálási naplót, kattintson <a href=\"ShowSyncLog\">ide</a>."
 #: src/LinuxClient/application/iFolderApplication.cs:462 
 #, csharp-format
 msgid "Incomplete Synchronization: {0}"
@@ -42,7 +42,7 @@ msgid ""
 "{0} has invited you to participate in this shared iFolder.\n"
 "\n"
 "Click <a href=\"SetUpiFolder:{1}\">here</a> to set up this iFolder."
-msgstr "{0} has invited you to participate in this shared iFolder.\n\nClick <a href=\"SetUpiFolder:{1}\">here</a> to set up this iFolder."
+msgstr "{0} meghívta, hogy vegyen részt ennek a megosztott iFolder mappának a használatában.\n\nAz iFolder mappa beállításához kattintson <a href=\"SetUpiFolder:{1}\">ide</a>."
 #: src/LinuxClient/application/iFolderApplication.cs:587 
 #, csharp-format
 msgid ""
@@ -51,7 +51,7 @@ msgid ""
 "Click <a href=\"ResolveiFolderConflicts:{0}\">here</a> to resolve the "
 "conflicts.\n"
 "What is a <a href=\"ShowConflictHelp\">conflict</a>?"
-msgstr "A conflict has been detected in this iFolder.\n\nClick <a href=\"ResolveiFolderConflicts:{0}\">here</a> to resolve the conflicts.\nWhat is a <a href=\"ShowConflictHelp\">conflict</a>?"
+msgstr "Ütközés észlelhető ebben az iFolder mappában.\n\nHa fel szeretné oldani az ütközéseket, kattintson <a href=\"ResolveiFolderConflicts:{0}\">ide</a>.\nMi az az <a href=\"ShowConflictHelp\">ütközés</a>?"
 #: src/LinuxClient/application/iFolderApplication.cs:646 
 msgid "New iFolder User"
 msgstr "Új iFolder felhasználó"
@@ -61,13 +61,13 @@ msgid "{0} has joined the iFolder \"{1}\""
 msgstr "{0} csatlakozott a következő iFolder mappához: \"{1}\""
 #: src/LinuxClient/application/iFolderApplication.cs:753 
 msgid "Welcome to iFolder"
-msgstr "Welcome to iFolder"
+msgstr "iFolder – köszönti a program"
 #: src/LinuxClient/application/iFolderApplication.cs:822 
 msgid "iFolder is starting"
-msgstr "iFolder is starting"
+msgstr "Az iFolder elindul"
 #: src/LinuxClient/application/iFolderApplication.cs:835 
 msgid "iFolder is shutting down"
-msgstr "iFolder is shutting down"
+msgstr "Az iFolder leáll"
 #: src/LinuxClient/application/iFolderApplication.cs:875 
 #: src/LinuxClient/library/iFolderWindow.cs:285
 msgid "iFolders"
@@ -157,7 +157,7 @@ msgid "N/A"
 msgstr "Nincs adat"
 #: src/LinuxClient/library/CreateDialog.cs:82 
 msgid "New iFolder</span>"
-msgstr "Új iFolder</span>"
+msgstr "New iFolder</span>"
 #: src/LinuxClient/library/CreateDialog.cs:93 
 #: src/LinuxClient/library/iFolderWindow.cs:441
 #: src/LinuxClient/library/iFolderWindow.cs:2275
@@ -174,11 +174,11 @@ msgstr "Hely:"
 #: src/LinuxClient/library/CreateDialog.cs:138 
 #: src/LinuxClient/library/iFolderAcceptDialog.cs:117
 msgid "Browse"
-msgstr "Tallózás"
+msgstr "Browse"
 #: src/LinuxClient/library/CreateDialog.cs:158 
 #: src/LinuxClient/library/iFolderAcceptDialog.cs:137
 msgid "Choose a folder..."
-msgstr "Válasszon mappát..."
+msgstr "Choose a folder..."
 #: src/LinuxClient/library/CreateDialog.cs:195 
 #: src/LinuxClient/library/iFolderAcceptDialog.cs:173
 #: src/LinuxClient/library/iFolderAccessDialog.cs:114
@@ -229,7 +229,7 @@ msgid ""
 msgstr "Név: {0}\nMegosztotta: {1}\nHozzáférés: {2}"
 #: src/LinuxClient/library/iFolderAcceptDialog.cs:91 
 msgid "Choose a location on this computer for the iFolder."
-msgstr "Válassza ki, hogy hol legyen a számítógépen az iFolder mappa."
+msgstr "Choose a location on this computer for the iFolder."
 #: src/LinuxClient/library/iFolderAccessDialog.cs:75 
 msgid "Access for Multiple Users"
 msgstr "Hozzáférés több felhasználó számára"
@@ -585,10 +585,10 @@ msgid "Share _with..."
 msgstr "Me_gosztás..."
 #: src/LinuxClient/library/iFolderWindow.cs:517 
 msgid "Resolve conflic_ts"
-msgstr "Resolve conflic_ts"
+msgstr "Ütközések fel_oldása"
 #: src/LinuxClient/library/iFolderWindow.cs:522 
 msgid "S_ynchronize now"
-msgstr "S_ynchronize now"
+msgstr "S_zinkronizálás most"
 #: src/LinuxClient/library/iFolderWindow.cs:527 
 msgid "_Revert to a Normal Folder"
 msgstr "Visszaalakítás normál mappává"
@@ -809,7 +809,7 @@ msgid ""
 msgstr "A megadott mappa nem létezik. Válasszon meglévő mappát, és próbálja meg újból."
 #: src/LinuxClient/library/iFolderWindow.cs:2303 
 msgid "A folder with the same name already exists."
-msgstr "A folder with the same name already exists."
+msgstr "Már létezik ilyen nevű mappa."
 #: src/LinuxClient/library/iFolderWindow.cs:2304 
 msgid ""
 "The location you selected already contains a folder with the same name as "
@@ -817,121 +817,121 @@ msgid ""
 msgstr "A kiválasztott helyen már vagy egy ugyanolyan nevű mappa, mint ez az iFolder mappa. Válasszon másik helyet, és próbálja meg újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2308 
 msgid "iFolders cannot exist at the drive level."
-msgstr "iFolders cannot exist at the drive level."
+msgstr "A meghajtó szintjén nem létezhetnek iFolder mappák."
 #: src/LinuxClient/library/iFolderWindow.cs:2309 
 msgid ""
 "The location you selected is at the root of the drive.  Please select a "
 "location that is not at the root of a drive and try again."
-msgstr "The location you selected is at the root of the drive.  Please select a location that is not at the root of a drive and try again."
+msgstr "A kiválasztott hely a meghajtó gyökerében van. Válasszon olyan helyet, amely nem a meghajtó gyökerében van, majd próbálkozzon újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2313 
 msgid "The selected location contains invalid characters."
-msgstr "The selected location contains invalid characters."
+msgstr "A kiválasztott hely érvénytelen karaktereket tartalmaz."
 #: src/LinuxClient/library/iFolderWindow.cs:2314 
 msgid ""
 "The characters \\:*?\"<>| cannot be used in an iFolder. Please select a "
 "different location and try again."
-msgstr "The characters \\:*?\"<>| cannot be used in an iFolder. Please select a different location and try again."
+msgstr "A \\:*?\"<>| karakterek nem használhatók iFolder mappában. Válasszon másik helyet, majd próbálkozzon újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2318 
 msgid "The selected location is inside the iFolder data folder."
-msgstr "The selected location is inside the iFolder data folder."
+msgstr "A kiválasztott hely az iFolder adatmappáján belül van."
 #: src/LinuxClient/library/iFolderWindow.cs:2319 
 msgid ""
 "The iFolder data folder is normally located in your home folder in the "
 "folder \".local/share\".  Please select a different location and try again."
-msgstr "The iFolder data folder is normally located in your home folder in the folder \".local/share\".  Please select a different location and try again."
+msgstr "Az iFolder adatmappája általában a felhasználó alapmappájában található, a  \".local/share\" mappában. Válasszon másik helyet, és próbálkozzon újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2323 
 msgid "The selected location contains the iFolder data files."
-msgstr "The selected location contains the iFolder data files."
+msgstr "A kijelölt mappa az iFolder adatfájljait tartalmazza."
 #: src/LinuxClient/library/iFolderWindow.cs:2324 
 msgid ""
 "The location you have selected contains the iFolder data files.  These are "
 "normally located in your home folder in the folder \".local/share\".  Please "
 "select a different location and try again."
-msgstr "The location you have selected contains the iFolder data files.  These are normally located in your home folder in the folder \".local/share\".  Please select a different location and try again."
+msgstr "A kiválasztott hely az iFolder adatfájljait tartalmazza. Ezek általában a felhasználó alapmappájában, a \".local/share\" mappában találhatók. Válasszon másik helyet, majd próbálkozzon újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2328 
 msgid "The selected location is on a network or non-physical drive."
-msgstr "The selected location is on a network or non-physical drive."
+msgstr "A kijelölt hely hálózati vagy nem fizikai meghajtón található."
 #: src/LinuxClient/library/iFolderWindow.cs:2329 
 msgid ""
 "iFolders must reside on a physical drive.  Please select a different "
 "location and try again."
-msgstr "iFolders must reside on a physical drive.  Please select a different location and try again."
+msgstr "Az iFolder mappáknak fizikai meghajtón kell létezniük. Válasszon másik helyet, majd próbálkozzon újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2333 
 msgid "The selected location contains a system folder."
-msgstr "The selected location contains a system folder."
+msgstr "A kiválasztott hely egy rendszermappát tartalmaz."
 #: src/LinuxClient/library/iFolderWindow.cs:2334 
 msgid ""
 "System folders cannot be contained in an iFolder.  Please select a different "
 "location and try again."
-msgstr "System folders cannot be contained in an iFolder.  Please select a different location and try again."
+msgstr "Rendszermappák nem lehetnek iFolder mappán belül. Válasszon másik helyet, majd próbálkozzon újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2338 
 msgid "The selected location is a system drive."
-msgstr "The selected location is a system drive."
+msgstr "A kiválasztott hely rendszermeghajtó."
 #: src/LinuxClient/library/iFolderWindow.cs:2339 
 msgid ""
 "System drives cannot be contained in an iFolder.  Please select a different "
 "location and try again."
-msgstr "System drives cannot be contained in an iFolder.  Please select a different location and try again."
+msgstr "A rendszermeghajtók nem lehetnek iFolder mappán belül. Válasszon másik helyet, majd próbálkozzon újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2343 
 msgid "The selected location includes the Windows folder."
-msgstr "The selected location includes the Windows folder."
+msgstr "A kiválasztott hely tartalmazza a Windows mappát."
 #: src/LinuxClient/library/iFolderWindow.cs:2344 
 msgid ""
 "The Windows folder cannot be contained in an iFolder.  Please select a "
 "different location and try again."
-msgstr "The Windows folder cannot be contained in an iFolder.  Please select a different location and try again."
+msgstr "A Windows mappa nem lehet iFolder mappán belül. Válasszon másik helyet, majd próbálkozzon újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2348 
 msgid "The selected location includes the Program Files folder."
-msgstr "The selected location includes the Program Files folder."
+msgstr "A kiválasztott mappa tartalmazza a Program Files mappát."
 #: src/LinuxClient/library/iFolderWindow.cs:2349 
 msgid ""
 "The Program Files folder cannot be contained in an iFolder.  Please select a "
 "different location and try again."
-msgstr "The Program Files folder cannot be contained in an iFolder.  Please select a different location and try again."
+msgstr "A Program Files mappa nem lehet iFolder mappán belül. Válasszon másik helyet, majd próbálkozzon újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2353 
 msgid "The selected location does not exist."
-msgstr "The selected location does not exist."
+msgstr "Nem létezik a kiválasztott hely."
 #: src/LinuxClient/library/iFolderWindow.cs:2354 
 msgid ""
 "iFolders can only be created from folders that exist.  Please select a "
 "different location and try again."
-msgstr "iFolders can only be created from folders that exist.  Please select a different location and try again."
+msgstr "Csak létező mappákból lehet iFolder mappát létrehozni. Válasszon másik helyet, majd próbálkozzon újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2358 
 msgid "You do not have access to read files in the selected location."
-msgstr "You do not have access to read files in the selected location."
+msgstr "Nincs joga a kiválasztott helyen található fájlok olvasására."
 #: src/LinuxClient/library/iFolderWindow.cs:2359 
 #: src/LinuxClient/library/iFolderWindow.cs:2364
 msgid ""
 "iFolders can only be created from folders where you have access to read and "
 "write files.  Please select a different location and try again."
-msgstr "iFolders can only be created from folders where you have access to read and write files.  Please select a different location and try again."
+msgstr "Csak olyan mappákból lehet iFolder mappát létrehozni, amelyben Önnek joga van a fájlok írására és olvasására. Válasszon másik mappát, majd próbálkozzon újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2363 
 msgid "You do not have access to write files in the selected location."
-msgstr "You do not have access to write files in the selected location."
+msgstr "Nincs joga fájlokat írni a kiválasztott helyre."
 #: src/LinuxClient/library/iFolderWindow.cs:2368 
 msgid "The selected location already contains an iFolder."
-msgstr "The selected location already contains an iFolder."
+msgstr "A kiválasztott hely már tartalmaz egy iFolder mappát."
 #: src/LinuxClient/library/iFolderWindow.cs:2369 
 #: src/LinuxClient/library/iFolderWindow.cs:2374
 msgid ""
 "iFolders cannot exist inside other iFolders.  Please select a different "
 "location and try again."
-msgstr "iFolders cannot exist inside other iFolders.  Please select a different location and try again."
+msgstr "Az iFolder mappa nem lehet másik iFolder mappában. Válasszon másik helyet, majd próbálkozzon újra."
 #: src/LinuxClient/library/iFolderWindow.cs:2373 
 msgid "The selected location is inside another iFolder."
-msgstr "The selected location is inside another iFolder."
+msgstr "A kiválasztott hely egy másik iFolder mappában van."
 #: src/LinuxClient/library/LogWindow.cs:58 
 msgid "iFolder Synchronization Log"
 msgstr "iFolder szinkronizálási napló"
 #: src/LinuxClient/library/LogWindow.cs:152 
 msgid "Save"
-msgstr "Mentés"
+msgstr "Save"
 #: src/LinuxClient/library/LogWindow.cs:153 
 msgid "Save the synchronization log"
 msgstr "A szinkronizálási napló mentése"
 #: src/LinuxClient/library/LogWindow.cs:157 
 msgid "Clear"
-msgstr "Törlés"
+msgstr "Clear"
 #: src/LinuxClient/library/LogWindow.cs:158 
 msgid "Clear the synchronization log"
 msgstr "A szinkronizálási napló kiürítése"
@@ -1000,7 +1000,7 @@ msgstr "A számítógépen lévő elégtelen szabad lemezterület miatt nem lehe
 #: src/LinuxClient/library/LogWindow.cs:427 
 #, csharp-format
 msgid "Read-only iFolder prevented synchronization: {0}"
-msgstr "Read-only iFolder prevented synchronization: {0}"
+msgstr "Egy írásvédett iFolder megakadályozta a szinkronizálást: {0}"
 #: src/LinuxClient/library/LogWindow.cs:432 
 #, csharp-format
 msgid "iFolder failed synchronization: {0}"
@@ -1042,7 +1042,7 @@ msgid "iFolder Preferences"
 msgstr "iFolder beállítások"
 #: src/LinuxClient/library/PreferencesWindow.cs:111 
 msgid "Accou_nts"
-msgstr "Accou_nts"
+msgstr "Fiók_ok"
 #: src/LinuxClient/library/PrefsAccountsPage.cs:173 
 msgid "System Name"
 msgstr "Rendszer neve"
@@ -1084,7 +1084,7 @@ msgstr "Hagyja elveszni az aktuális beállításokat?"
 msgid ""
 "You are currently creating a new account.  By selecting a different account "
 "you cancel the operation."
-msgstr "You are currently creating a new account.  By selecting a different account you cancel the operation."
+msgstr "Jelenleg egy új fiók létrehozását végzi. Ha másik fiókot választ, megszakítja a műveletet."
 #: src/LinuxClient/library/PrefsAccountsPage.cs:671 
 msgid "Unable to log out of the iFolder Server"
 msgstr "Nem sikerült kijelentkezni az iFolder kiszolgálóról"
@@ -1142,7 +1142,7 @@ msgstr "Még {0} bejelentkezési kísérlete van."
 msgid ""
 "You are currently creating a new account.  By closing the window or changing "
 "to a different page you cancel the operation."
-msgstr "You are currently creating a new account.  By closing the window or changing to a different page you cancel the operation."
+msgstr "Jelenleg egy új fiókot hoz létre. Ha bezárja az ablakot, vagy átvált egy másik oldalra, azzal megszakítja a műveletet."
 #: src/LinuxClient/library/PrefsGeneralPage.cs:102 
 msgid "Application"
 msgstr "Alkalmazás"
@@ -1159,7 +1159,7 @@ msgid "Notification"
 msgstr "Értesítés"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:163 
 msgid "Notify of share_d iFolders"
-msgstr "Notify of share_d iFolders"
+msgstr "Értesítés a m_egosztott iFolder mappákról"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:170 
 msgid "Notify of conflic_ts"
 msgstr "Értesítés az üt_közésekről"
@@ -1168,7 +1168,7 @@ msgid "Notify when a _user joins"
 msgstr "Értesítés _felhasználó csatlakozásakor"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:219 
 msgid "Automatically S_ynchronize iFolders"
-msgstr "Automatically S_ynchronize iFolders"
+msgstr "Az iFolder mappák automatikus s_zinkronizálása"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:229 
 msgid "Synchronize iFolders Every"
 msgstr "iFolder mappák szinkronizálási gyakorisága:"
@@ -1186,12 +1186,12 @@ msgid "days"
 msgstr "nap"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:503 
 msgid "Synchronization Interval Limit"
-msgstr "Synchronization Interval Limit"
+msgstr "A szinkronizálási időköz határértéke"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:504 
 msgid ""
 "The synchronization interval cannot be set to less than one minute.  It was "
 "automatically changed to 60 seconds."
-msgstr "The synchronization interval cannot be set to less than one minute.  It was automatically changed to 60 seconds."
+msgstr "A szinkronizálási időköz nem állítható egy percnél rövidebbre. Automatikusan 60 másodpercre módosult."
 #: src/LinuxClient/library/RemoveAccountDialog.cs:61 
 msgid "Remove this iFolder account?"
 msgstr "Eltávolítja ezt az iFolder fiókot?"
@@ -1216,10 +1216,10 @@ msgstr "Ha a kiszolgálóról eltávolítja az iFolder mappákat, azzal törli a
 #: src/LinuxClient/library/Util.cs:167 
 #, csharp-format
 msgid "Error displaying help file \"{0}\""
-msgstr "Error displaying help file \"{0}\""
+msgstr "Hiba a következő súgófájl megjelenítése közben: \"{0}\""
 #: src/LinuxClient/library/Util.cs:168 
 msgid "iFolder could not open the default web browser to show the help file."
-msgstr "iFolder could not open the default web browser to show the help file."
+msgstr "Az iFolder nem tudta megnyitni az alapértelmezett webböngészőt, hogy megjelenítse a súgófájlt."
 #: src/LinuxClient/library/Util.cs:180 
 msgid "iFolder 3 Team"
 msgstr "Az iFolder 3-csapat"
