--- a/ifolder/src/iFolderShell/ConflictResolver.sk.resx
+++ b/ifolder/src/iFolderShell/ConflictResolver.sk.resx
@@ -507,7 +507,7 @@
 	</data>
   
 	<data name="ifolderName.HelpString">
-		<value>Názov priečinku iFolder, ktorý obsahuje konflikt.</value>
+		<value>Názov priečinka iFolder, ktorý obsahuje konflikt.</value>
 	</data>
   
 	<data name="ifolderName.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -627,7 +627,7 @@
 	</data>
   
 	<data name="ifolderPath.HelpString">
-		<value>Úplná cesta priečinku iFolder, ktorý obsahuje konflikt.</value>
+		<value>Úplná cesta priečinka iFolder, ktorý obsahuje konflikt.</value>
 	</data>
   
 	<data name="ifolderPath.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1039,7 +1039,7 @@
 	</data>
   
 	<data name="saveLocal.HelpString">
-		<value>Kliknutím nahradíte súbor na serveri priečinku iFolder súborom v lokálnom počítači.</value>
+		<value>Kliknutím nahradíte súbor na serveri iFolder súborom na lokálnom počítači.</value>
 	</data>
   
 	<data name="saveLocal.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1999,7 +1999,7 @@
 	</data>
   
 	<data name="saveServer.HelpString">
-		<value>Kliknutím nahradíte súbor v lokálnom počítači súborom na serveri priečinku iFolder.</value>
+		<value>Kliknutím nahradíte súbor v lokálnom počítači súborom na serveri iFolder.</value>
 	</data>
   
 	<data name="saveServer.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -2119,7 +2119,7 @@
 	</data>
   
 	<data name="serverSize.HelpString">
-		<value>Veľkosť súboru na serveri priečinku iFolder.</value>
+		<value>Veľkosť súboru na serveri iFolder.</value>
 	</data>
   
 	<data name="serverSize.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -2239,7 +2239,7 @@
 	</data>
   
 	<data name="serverDate.HelpString">
-		<value>Dátum súboru na serveri priečinku iFolder.</value>
+		<value>Dátum súboru na serveri iFolder.</value>
 	</data>
   
 	<data name="serverDate.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -4123,7 +4123,7 @@
 	</data>
   
 	<data name="conflictErrorTitle">
-		<value>Chyba konfliktu priečinku iFolder</value>
+		<value>Chyba konfliktu priečinka iFolder</value>
 	</data>
   
 	<data name="conflictReadError">
