--- a/ifolder/src/iFolderShell/NewiFolder.cs.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.cs.resx
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
+		<value>Vybraná složka je nyní složkou iFolder a odlišuje se od ostatních složek emblémem iFolder. Pokud se chcete dozvědět více o používání složek iFolder a jejich sdílení s jinými uživateli, podívejte se na [hyperlink] v nápovědě pro složky iFolder.</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -635,6 +635,6 @@
 	</data>
   
 	<data name="[hyperlink]">
-		<value>Managing iFolders</value>
+		<value>Správa složek iFolder</value>
 	</data>
 </root>
