--- a/ifolder/src/iFolderShell/NewiFolder.es.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.es.resx
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
+		<value>La carpeta que ha seleccionado es una carpeta iFolder y se distingue de las demás carpetas gracias al emblema iFolder. Para obtener más información sobre la utilización de iFolder y la compartición de carpetas iFolder con otros usuarios, consulte [hiperenlace] en la Ayuda de iFolder.</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -635,6 +635,6 @@
 	</data>
   
 	<data name="[hyperlink]">
-		<value>Managing iFolders</value>
+		<value>Gestión de carpetas iFolder</value>
 	</data>
 </root>
