--- a/ifolder/src/iFolderShell/NewiFolder.fr.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.fr.resx
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
+		<value>Le dossier sélectionné est désormais un dossier iFolder. Il se différencie des autres dossiers par l'emblème iFolder. Pour en savoir plus sur l'utilisation des dossiers iFolder et sur le partage de ces dossiers avec d'autres utilisateurs, reportez-vous à [hyperlink] dans l'aide iFolder.</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -635,6 +635,6 @@
 	</data>
   
 	<data name="[hyperlink]">
-		<value>Managing iFolders</value>
+		<value>Gestion des dossiers iFolder</value>
 	</data>
 </root>
