--- a/ifolder/src/iFolderShell/NewiFolder.hu.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.hu.resx
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
+		<value>A kijelölt mappa mostantól iFolder, és a többi mappától az iFolder embléma különbözteti meg. Ha többet szeretne megtudni az iFolder használatáról, illetve az iFolder mappák más felhasználókkal közös használatáról, olvassa el az iFolder súgójának [hyperlink] témakörét.</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -635,6 +635,6 @@
 	</data>
   
 	<data name="[hyperlink]">
-		<value>Managing iFolders</value>
+		<value>iFolder mappák kezelése</value>
 	</data>
 </root>
