--- a/ifolder/src/iFolderShell/NewiFolder.it.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.it.resx
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
+		<value>La cartella selezionata è ora una cartella iFolder ed è contraddistinta dal simbolo iFolder. Per ulteriori informazioni sull'utilizzo di iFolder e sulla condivisione delle cartelle iFolder con altri utenti, vedere l'argomento [collegamento ipertestuale] nella Guida di iFolder.</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -635,6 +635,6 @@
 	</data>
   
 	<data name="[hyperlink]">
-		<value>Managing iFolders</value>
+		<value>Gestione delle cartelle iFolder</value>
 	</data>
 </root>
