--- a/ifolder/src/iFolderShell/NewiFolder.ja.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.ja.resx
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
+		<value>選択されているフォルダは現在iFolderになっており、iFolderエンブレムによって他のフォルダと区別されます。iFolderの使用方法およびiFolderを他のユーザと共有する方法については、iFolderヘルプの [hyperlink] を参照してください。</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -635,6 +635,6 @@
 	</data>
   
 	<data name="[hyperlink]">
-		<value>Managing iFolders</value>
+		<value>iFolderの管理</value>
 	</data>
 </root>
