--- a/ifolder/src/iFolderShell/NewiFolder.pl.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.pl.resx
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
+		<value>Wybrany folder jest teraz folderem iFolder i różni się od pozostałych folderów oznaczeniem iFolder. Więcej informacji o korzystaniu z programu iFolder i udostępniania folderów iFolder innym użytkownikom można znaleźć w sekcji [hyperlink] Pomocy programu iFolder.</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -635,6 +635,6 @@
 	</data>
   
 	<data name="[hyperlink]">
-		<value>Managing iFolders</value>
+		<value>Zarządzanie folderami iFolder</value>
 	</data>
 </root>
