--- a/ifolder/src/iFolderShell/NewiFolder.pt.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.pt.resx
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
+		<value>A pasta selecionada agora é uma pasta iFolder, sendo diferenciada das outras pastas pelo emblema do iFolder. Para saber mais sobre como usar o iFolder e compartilhar suas pastas com outros usuários, consulte [hyperlink] na Ajuda do iFolder.</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -635,6 +635,6 @@
 	</data>
   
 	<data name="[hyperlink]">
-		<value>Managing iFolders</value>
+		<value>Gerenciando pastas iFolder</value>
 	</data>
 </root>
