--- a/ifolder/src/iFolderShell/NewiFolder.sk.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.sk.resx
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
+		<value>Vybratý priečinok je teraz priečinkom iFolder a odlišuje sa od ostatných priečinkov emblémom aplikácie iFolder. Ak sa chcete dozvedieť viac o používaní aplikácie iFolder a zdieľaní priečinkov iFolder s inými používateľmi, pozrite si tému [hyperlink] v pomocníkovi aplikácie iFolder.</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -635,6 +635,6 @@
 	</data>
   
 	<data name="[hyperlink]">
-		<value>Managing iFolders</value>
+		<value>Spravovanie priečinkov iFolder</value>
 	</data>
 </root>
