--- a/ifolder/src/iFolderShell/NewiFolder.zh-CN.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.zh-CN.resx
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
+		<value>所选文件夹现在是一个 iFolder，已使用 iFolder 徽标将其与其它文件夹区分开。若要了解有关使用 iFolder 以及与其他用户共享 iFolder 的更多信息，请参见 iFolder 帮助中的 [hyperlink]。</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -635,6 +635,6 @@
 	</data>
   
 	<data name="[hyperlink]">
-		<value>Managing iFolders</value>
+		<value>管理 iFolder</value>
 	</data>
 </root>
