--- a/ifolder/src/iFolderShell/NewiFolder.zh-TW.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.zh-TW.resx
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
+		<value>選定資料夾現在是 iFolder，它與具有 iFolder 徽章的其他資料夾不同。若要瞭解使用 iFolder 及與其他使用者共享 iFolders 的詳細資訊，請參閱「iFolder 說明」中的 [hyperlink]。</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -635,6 +635,6 @@
 	</data>
   
 	<data name="[hyperlink]">
-		<value>Managing iFolders</value>
+		<value>管理 iFolder</value>
 	</data>
 </root>
