--- a/ifolder/src/iFolderShell/iFolderAdvanced.sk.resx
+++ b/ifolder/src/iFolderShell/iFolderAdvanced.sk.resx
@@ -1851,7 +1851,7 @@
 	</data>
   
 	<data name="limitEdit.HelpString">
-		<value>Zobrazí limit veľkosti tohto priečinku iFolder</value>
+		<value>Zobrazí limit veľkosti tohto priečinka iFolder.</value>
 	</data>
   
 	<data name="limitEdit.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1991,7 +1991,7 @@
 	</data>
   
 	<data name="setLimit.HelpString">
-		<value>Začiarknite, ak chcete nastaviť limit veľkosti tohto priečinku iFolder.</value>
+		<value>Začiarknutím nastavíte limit veľkosti tohto priečinka iFolder.</value>
 	</data>
   
 	<data name="setLimit.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -2831,7 +2831,7 @@
 	</data>
   
 	<data name="used.HelpString">
-		<value>Zobrazí veľkosť tohto priečinku iFolder</value>
+		<value>Zobrazí veľkosť tohto priečinka iFolder</value>
 	</data>
   
 	<data name="used.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -3191,7 +3191,7 @@
 	</data>
   
 	<data name="limit.HelpString">
-		<value>Zobrazí limit veľkosti tohto priečinku iFolder</value>
+		<value>Zobrazí limit veľkosti tohto priečinka iFolder.</value>
 	</data>
   
 	<data name="limit.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -5383,7 +5383,7 @@
 	</data>
   
 	<data name="memberReadError">
-		<value>Pri čítaní členov priečinku iFolder nastala chyba.</value>
+		<value>Pri čítaní členov priečinka iFolder nastala chyba.</value>
 	</data>
   
 	<data name="Admin">
@@ -5439,7 +5439,7 @@
 	</data>
   
 	<data name="changeOwnerError">
-		<value>Pri ukladaní nového vlastníka priečinku iFolder nastala chyba.</value>
+		<value>Pri ukladaní nového vlastníka priečinka iFolder nastala chyba.</value>
 	</data>
   
 	<data name="memberCommitError">
@@ -5455,7 +5455,7 @@
 	</data>
   
 	<data name="iFolderReadError">
-		<value>Pri čítaní údajov priečinku iFolder nastala chyba.</value>
+		<value>Pri čítaní údajov priečinka iFolder nastala chyba.</value>
 	</data>
   
 	<data name="saveChanges">
@@ -5487,7 +5487,7 @@
 	</data>
   
 	<data name="conflictErrorTitle">
-		<value>Chyba konfliktu priečinku iFolder</value>
+		<value>Chyba konfliktu priečinka iFolder</value>
 	</data>
   
 	<data name="conflictDialogError">
